# MVEPlayer-Quantum

./: .gitignore  CMakeLists.txt  MiniSDL.cpp  MiniSDL.h  io_OpenGL.cpp  io_OpenGL.h  io_Platform.cpp  io_Platform.h  io_Timer.cpp  io_Timer.h  main.cpp  parse_audio.cpp  parse_audio.h  parse_audio_alsa.cpp  parse_audio_alsa.h  parse_audio_pipewire.cpp  parse_audio_pipewire.h  parse_audio_pipewire_thread.cpp  parse_audio_pipewire_thread.h  parse_audio_sdl.cpp  parse_audio_sdl.h  parse_opcodes.cpp  parse_opcodes.h  parse_video.cpp  parse_video.h  ring_buffer.cpp  ring_buffer.h
dependencies/glad-2.0.8/include/glad/: gl.h
dependencies/glad-2.0.8/src/: gl.c
dependencies/glad1/: CMakeLists.txt
dependencies/glad1/include/glad/: glad.h
dependencies/glad1/src/: glad.c
src/: MiniSDL.h  io_Timer.cpp  io_Timer.h  main.cpp  parse_audio.cpp  parse_audio.h  parse_audio_alsa.cpp  parse_audio_alsa.h  parse_audio_pipewire.cpp  parse_audio_pipewire_thread.cpp  parse_audio_pipewire_thread.h  parse_audio_sdl.cpp  parse_audio_sdl.h  parse_opcodes.cpp  parse_opcodes.h  parse_video.h  ring_buffer.cpp  ring_buffer.h
tests/: CMakeLists.txt  video_tests.cpp
